fix: fix horizontal scroll

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -9,6 +9,7 @@ body {
 
   font-size: $mainTextSize;
   color: $primaryColor;
+  overflow-x: hidden;
 }
 
 p {
